--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
     "uglifyify": "^3.0.4"
   },
   "scripts": {
-    "test": "echo \"Ctrl-Z to suspend the loop. kill %% to get rid of it\\nStop when the hash changes.\\n\\n\"; for i in `seq 0 100`; do echo \"require('./b')\" | browserify - -t uglifyify | tee output-$i.js | openssl dgst -sha1; done"
+    "test": "echo \"Ctrl-Z to suspend the loop. kill %% to get rid of it\\nStop when the hash changes. Note: might be rare. Be patient.\\n\\n\"; sleep 3; for i in `seq 0 100`; do echo \"require('./b')\" | browserify - -t uglifyify | tee output-$i.js | openssl dgst -sha1; done"
   }
 }
